# myagent

./: .gitignore  PROJECT_OVERVIEW.md  agent.py  app.py  chat.py  mcp_servers.json  pyproject.toml
.claude/: settings.local.json
api/: engine.py  qwen.py
docs/superpowers/plans/: 2026-03-26-rag-long-term-memory.md  2026-03-27-gradio-frontend.md
docs/superpowers/specs/: 2026-03-26-rag-long-term-memory-design.md  2026-03-27-gradio-frontend-design.md
memory/: long_term.py  manager.py  short_term.py
memory/chroma_store/: chroma.sqlite3
tests/: test_agent_stream.py
tests/memory/: test_long_term.py
tools/: base_tools.py  mcp_loader.py
